Try harder to match preferred color-scheme setting.
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox98 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(1 file, 1 obsolete file)
Assignee | ||
Comment 1•3 years ago
|
||
The only behavior change here is that, if we have a color scheme
preference, we may try to use the alt theme rather than the system
theme, rather than just setting gtk-application-prefer-dark-theme which
themes are not guaranteed to honor.
But this also makes the whole init process clearer and faster when the
final theme should be the alt theme (either due to the Firefox theme or
due to the preferred color-scheme preference). Before:
- Init system theme.
- Configure alt theme.
- Init alt theme.
- Restore system theme in WithAltThemeConfigured.
- Configure the alt theme in MatchFirefoxThemeIfNeeded.
Now:
- Init system theme.
- Configure alt theme.
- Init alt theme.
Comment 2•3 years ago
|
||
When using Breeze Gtk, the alt theme is detected as Adwaita Dark. I would prefer not having Firefox use Adwaita Dark in that case.
Assignee | ||
Comment 3•3 years ago
|
||
When https://bugs.kde.org/show_bug.cgi?id=448877 is fixed it should switch to Breeze-dark. Until then Adwaita-dark is the less bad we can do.
Assignee | ||
Comment 4•3 years ago
|
||
(And if the Breeze theme is dark we'd still use that)
Comment 6•3 years ago
|
||
bugherder |
Assignee | ||
Comment 7•3 years ago
|
||
This was needed before bug 1751432 but isn't anymore, and can cause
issues. If the system GTK theme is dark we should arguably not switch to
light in that case.
Comment 8•3 years ago
|
||
Comment on attachment 9260403 [details]
Bug 1751432 - Fix ComputeColorSchemeSetting to stop assuming 0 == Light. r=stransky
Revision D136752 was moved to bug 1751723. Setting attachment 9260403 [details] to obsolete.
Comment 9•3 years ago
|
||
Causing bad colors on my latest nightly. See https://bugzilla.mozilla.org/show_bug.cgi?id=1751735
Comment 10•3 years ago
|
||
See also my previous bug that might be related. https://bugzilla.mozilla.org/show_bug.cgi?id=1742299
Description
•