Bug 1751432 - Clean up LookAndFeel init, and try harder to match the preferred appearance. r=stransky

The only behavior change here is that, if we have a color scheme
preference, we may try to use the alt theme rather than the system
theme, rather than just setting gtk-application-prefer-dark-theme which
themes are not guaranteed to honor.

But this also makes the whole init process clearer and faster when the
final theme should be the alt theme (either due to the Firefox theme or
due to the preferred color-scheme preference). Before:

 * Init system theme.
 * Configure alt theme.
 * Init alt theme.
 * Restore system theme in WithAltThemeConfigured.
 * Configure the alt theme in MatchFirefoxThemeIfNeeded.

Now:

 * Init system theme.
 * Configure alt theme.
 * Init alt theme.

Differential Revision: https://phabricator.services.mozilla.com/D136618